# Elena

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: __init__.py  config.py  main.py
app/api/routes/: chat.py
app/core/: __init__.py  graph.py  logging_config.py  persona.py  state.py
app/db/: __init__.py  postgres.py  schema.sql  supabase.py
app/schemas/: __init__.py  chat.py
app/services/: __init__.py  conversation.py  embedding.py  image.py  memory.py
tests/: test_embedding.py  test_graph.py  test_memory.py  test_persona.py
